tests/lean/1074b.lean.expected.out
1074b.lean:10:30-10:31: error: unknown identifier 'z'
1074b.lean:11:43-11:53: error: tactic 'assumption' failed
a n : Term
⊢ Brx (sorryAx Term)
1074b.lean:11:9-11:55: error: unsolved goals
case id
a n z✝ : Term
 : Brx z✝
⊢ True ∧ Brx (sorryAx Term)
